Add support for additionalPorts to support multicluster architectures with clustermode
Signed-off-by: Michael <michaelrjnorris@gmail.com>

--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -112,6 +112,13 @@ spec:
             - name: tcp
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+            {{- if .Values.additionalPorts }}
+            {{- range .Values.additionalPorts }}
+            - name: {{ .name }}
+              containerPort: {{ .port }}
+              protocol: {{ .protocol }}
+            {{- end }}
+            {{- end }}
           startupProbe:
             exec:
               {{- if .Values.tls.enabled }}
