--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v4
         with:
-          version: v3.15.4
+          version: v3.19.4
 
       - name: Install helm-unittest plugin
-        run: helm plugin install https://github.com/helm-unittest/helm-unittest
+        run: helm plugin install https://github.com/helm-unittest/helm-unittest --version 1.0.2
 
       - name: Lint chart
         run: helm lint ./valkey
