imagePullSecrets fix for Replica and tests
Added fix from #97 to Replica StatefulSet
Add tests

Signed-off-by: Silvio Gissi <silvio@gissilabs.com>

--- a/valkey/templates/statefulset.yaml
+++ b/valkey/templates/statefulset.yaml
@@ -42,7 +42,7 @@ spec:
       {{- end }}
         checksum/initconfig: {{ include (print $.Template.BasePath "/init_config.yaml") . | sha256sum | trunc 32 | quote }}
     spec:
-      {{- (include "valkey.imagePullSecrets" .) | nindent 6 -}}
+      {{- (include "valkey.imagePullSecrets" .) | nindent 6 }}
       automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
       serviceAccountName: {{ include "valkey.serviceAccountName" . }}
       {{- if .Values.priorityClassName }}
