--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,7 +75,7 @@ jobs:
         run: |
           shopt -s nullglob
           repo=$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')
-          echo "${GITHUB_TOKEN}" | helm login ghcr.io/${repo} --username ${GITHUB_ACTOR} --password-stdin
+          echo "${GITHUB_TOKEN}" | helm registry login ghcr.io/${repo} --username ${GITHUB_ACTOR} --password-stdin
           for pkg in .cr-release-packages/*; do
             if [ -z "${pkg:-}" ]; then
               break
