OC: add comment to values.yaml
Signed-off-by: OctoCrisp <cpaulipost@gmail.com>

--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -445,4 +445,5 @@ metrics:
     #   labels:
     #     severity: error
 
+# Extra Containers to add to the valkey pod deployment or stateful set
 extraContainers: []
