--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -101,6 +101,9 @@ initResources: {}
 # Additional init containers
 extraInitContainers: []
 
+# Additional containers
+extraContainers: []
+
 # Persistent storage configuration (standalone deployment only)
 dataStorage:
   # Enable persistent volume claim creation
@@ -444,6 +447,3 @@ metrics:
     #   for: 1s
     #   labels:
     #     severity: error
-
-# Extra Containers to add to the valkey pod deployment or stateful set
-extraContainers: []
