--- a/valkey/tests/cluster_test.yaml
+++ b/valkey/tests/cluster_test.yaml
@@ -345,3 +345,153 @@ tests:
       - matchRegex:
           path: data["init.sh"]
           pattern: "cluster-allow-reads-when-down yes"
+
+  # Cluster auth secret mount tests (bug fix: ensure main container has access to plaintext password)
+  - it: should mount valkey-users-secret to main container when auth.usersExistingSecret is set
+    set:
+      cluster.enabled: true
+      cluster.persistence.size: "5Gi"
+      auth.enabled: true
+      auth.usersExistingSecret: "my-valkey-users"
+      auth.aclUsers:
+        default:
+          permissions: "~* &* +@all"
+    template: templates/cluster-statefulset.yaml
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].volumeMounts
+          content:
+            name: valkey-users-secret
+            mountPath: /valkey-users-secret
+            readOnly: true
+
+  - it: should mount valkey-auth-secret to main container when inline passwords are used
+    set:
+      cluster.enabled: true
+      cluster.persistence.size: "5Gi"
+      auth.enabled: true
+      auth.aclUsers:
+        default:
+          password: "testpass"
+          permissions: "~* &* +@all"
+    template: templates/cluster-statefulset.yaml
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].volumeMounts
+          content:
+            name: valkey-auth-secret
+            mountPath: /valkey-auth-secret
+            readOnly: true
+
+  - it: should mount both auth secrets to main container when both are configured
+    set:
+      cluster.enabled: true
+      cluster.persistence.size: "5Gi"
+      auth.enabled: true
+      auth.usersExistingSecret: "my-valkey-users"
+      auth.aclUsers:
+        default:
+          permissions: "~* &* +@all"
+          password: "fallback"
+    template: templates/cluster-statefulset.yaml
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].volumeMounts
+          content:
+            name: valkey-users-secret
+            mountPath: /valkey-users-secret
+            readOnly: true
+      - contains:
+          path: spec.template.spec.containers[0].volumeMounts
+          content:
+            name: valkey-auth-secret
+            mountPath: /valkey-auth-secret
+            readOnly: true
+
+  # Cluster init script password retrieval tests (bug fix: read from secret, not ACL hash)
+  - it: cluster-script should read password from valkey-users-secret when usersExistingSecret is set
+    set:
+      cluster.enabled: true
+      cluster.persistence.size: "5Gi"
+      auth.enabled: true
+      auth.usersExistingSecret: "my-valkey-users"
+      auth.aclUsers:
+        default:
+          permissions: "~* &* +@all"
+    template: templates/cluster-script.yaml
+    asserts:
+      - matchRegex:
+          path: data["init-cluster.sh"]
+          pattern: '/valkey-users-secret/'
+      - notMatchRegex:
+          path: data["init-cluster.sh"]
+          pattern: '/etc/valkey/users.acl'
+
+  - it: cluster-script should read password from valkey-auth-secret when inline passwords are used
+    set:
+      cluster.enabled: true
+      cluster.persistence.size: "5Gi"
+      auth.enabled: true
+      auth.aclUsers:
+        default:
+          password: "testpass"
+          permissions: "~* &* +@all"
+    template: templates/cluster-script.yaml
+    asserts:
+      - matchRegex:
+          path: data["init-cluster.sh"]
+          pattern: '/valkey-auth-secret/default-password'
+      - notMatchRegex:
+          path: data["init-cluster.sh"]
+          pattern: '/etc/valkey/users.acl'
+
+  - it: cluster-script should use custom passwordKey when configured
+    set:
+      cluster.enabled: true
+      cluster.persistence.size: "5Gi"
+      auth.enabled: true
+      auth.usersExistingSecret: "my-valkey-users"
+      auth.aclUsers:
+        default:
+          permissions: "~* &* +@all"
+          passwordKey: "default-pwd"
+    template: templates/cluster-script.yaml
+    asserts:
+      - matchRegex:
+          path: data["init-cluster.sh"]
+          pattern: '/valkey-users-secret/default-pwd'
+
+  - it: cluster-script should use custom replicationUser for auth
+    set:
+      cluster.enabled: true
+      cluster.persistence.size: "5Gi"
+      cluster.replicationUser: "clusteruser"
+      auth.enabled: true
+      auth.aclUsers:
+        default:
+          password: "defaultpass"
+          permissions: "~* &* +@all"
+        clusteruser:
+          password: "clusterpass"
+          permissions: "~* &* +@all"
+    template: templates/cluster-script.yaml
+    asserts:
+      - matchRegex:
+          path: data["init-cluster.sh"]
+          pattern: '/valkey-auth-secret/clusteruser-password'
+
+  - it: cluster-script should NOT parse password hash from ACL file
+    set:
+      cluster.enabled: true
+      cluster.persistence.size: "5Gi"
+      auth.enabled: true
+      auth.aclUsers:
+        default:
+          password: "testpass"
+          permissions: "~* &* +@all"
+    template: templates/cluster-script.yaml
+    asserts:
+      # Ensure we don't try to extract the hash from the ACL file
+      - notMatchRegex:
+          path: data["init-cluster.sh"]
+          pattern: 'grep.*users\.acl'
