--- a/valkey/tests/statefulset_test.yaml
+++ b/valkey/tests/statefulset_test.yaml
@@ -254,3 +254,21 @@ tests:
       - equal:
           path: spec.persistentVolumeClaimRetentionPolicy.whenScaled
           value: Delete
+
+  - it: should include workload annotations when provided
+    set:
+      replica.enabled: true
+      replica.persistence.size: "5Gi"
+      workloadAnnotations:
+        example.com/annotation: "test-value"
+        custom.annotation: "custom-value"
+    template: templates/statefulset.yaml
+    asserts:
+      - isKind:
+          of: StatefulSet
+      - equal:
+          path: metadata.annotations["example.com/annotation"]
+          value: "test-value"
+      - equal:
+          path: metadata.annotations["custom.annotation"]
+          value: "custom-value"
