--- a/valkey/tests/deployment_test.yaml
+++ b/valkey/tests/deployment_test.yaml
@@ -322,3 +322,19 @@ tests:
             name: extra-config
             mountPath: /extra-config
             readOnly: true
+
+  - it: should include workload annotations when provided
+    set:
+      workloadAnnotations:
+        example.com/annotation: "test-value"
+        custom.annotation: "custom-value"
+    template: templates/deploy_valkey.yaml
+    asserts:
+      - isKind:
+          of: Deployment
+      - equal:
+          path: metadata.annotations["example.com/annotation"]
+          value: "test-value"
+      - equal:
+          path: metadata.annotations["custom.annotation"]
+          value: "custom-value"
