--- a/valkey/templates/statefulset.yaml
+++ b/valkey/templates/statefulset.yaml
@@ -15,6 +15,7 @@ spec:
   selector:
     matchLabels:
       {{- include "valkey.selectorLabels" . | nindent 6 }}
+  {{- if .Values.replica.persistence.enabled }}
   volumeClaimTemplates:
   - metadata:
       name: valkey-data
@@ -26,6 +27,7 @@ spec:
       resources:
         requests:
           storage: {{ .Values.replica.persistence.size | quote }}
+  {{- end }}
   template:
     metadata:
       labels:
@@ -206,6 +208,10 @@ spec:
             {{- end }}
         {{- end }}
       volumes:
+        {{- if not .Values.replica.persistence.enabled }}
+        - name: valkey-data
+          emptyDir: {{- toYaml .Values.replica.persistence.emptyDir | nindent 12 }}
+        {{- end }}
         - name: scripts
           configMap:
             name: {{ include "valkey.fullname" . }}-init-scripts
