--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -234,6 +234,9 @@ replica:
 
   # Persistence configuration (required for replicas)
   persistence:
+    # Enable persistence on Valkey using a Persistent Volume Claim
+    # IMPORTANT: If disabled, an emptyDir volume is used. This is not recommended and data loss will occur on primary restart.
+    enabled: true
     # Size of the PVC for each replica (required when replica.enabled is true)
     size: ""
     # Storage class name (empty = use default storage class)
@@ -241,6 +244,8 @@ replica:
     # Access modes for the PVC
     accessModes:
       - ReadWriteOnce
+    # EmptyDir params applies if persistence is disabled
+    emptyDir: {}
 
 tls:
   # Enable TLS
