fix: add missing volumes for statefulset
Signed-off-by: Jérémy Jourdan <54537427+kema-dev@users.noreply.github.com>

--- a/valkey/templates/statefulset.yaml
+++ b/valkey/templates/statefulset.yaml
@@ -260,6 +260,9 @@ spec:
             defaultMode: 0400
         {{- end }}
         {{- end }}
+        {{- with .Values.extraVolumes }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
