--- a/valkey/tests/deployment_test.yaml
+++ b/valkey/tests/deployment_test.yaml
@@ -279,7 +279,7 @@ tests:
           mountPath: /extra-config
           readOnly: true
         - name: extra-data
-          mountPath: /data/extra
+          mountPath: /extra/data
     template: templates/deploy_valkey.yaml
     asserts:
       - isKind:
@@ -294,7 +294,7 @@ tests:
           path: spec.template.spec.containers[0].volumeMounts
           content:
             name: extra-data
-            mountPath: /data/extra
+            mountPath: /extra/data
 
   - it: should render both extraVolumes and extraVolumeMounts together
     set:
