--- a/valkey/templates/configmap.yaml
+++ b/valkey/templates/configmap.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "valkey.fullname" . }}-config
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
 data:
