Add namespace to PodMonitor configuration
Signed-off-by: Nicola Urbinati <urbaman@gmail.com>

--- a/valkey/templates/podmonitor.yaml
+++ b/valkey/templates/podmonitor.yaml
@@ -3,6 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: {{ include "valkey.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
     app.kubernetes.io/part-of: valkey
