Add podManagementPolicy option
Signed-off-by: Dmytro Artamonov <artamonovdima355@gmail.com>

--- a/valkey-cluster/templates/deploy_valkey.yaml
+++ b/valkey-cluster/templates/deploy_valkey.yaml
@@ -14,6 +14,7 @@ metadata:
 spec:
   serviceName: {{ include "valkey-cluster.fullname" . }}-headless
   replicas: {{ .Values.replicaCount }}
+  podManagementPolicy: {{ .Values.podManagementPolicy }}
   selector:
     matchLabels:
       {{- include "valkey-cluster.selectorLabels" . | nindent 6 }}
