feat: support conditional environment variables with enabled flag
Signed-off-by: Tim Karger <tkarger@users.noreply.github.com>

--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -90,9 +90,11 @@ spec:
           securityContext:
             {{- include "renderTplValues" (dict "value" .Values.securityContext "indent" 12 "root" $ ) }}
           env:
-            {{- range $key, $val := .Values.env }}
+            {{- range $key, $env := .Values.env }}
+              {{- if $env.enabled }}
             - name: {{ $key }}
-              value: "{{ $val }}"
+              value: "{{ $env.value }}"
+              {{- end }}
             {{- end }}
             - name: VALKEY_LOGLEVEL
               value: "{{ .Values.valkeyLogLevel }}"
