--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -282,7 +282,9 @@ valkeyLogLevel: "notice"
 
 env: {}
   # Example:
-  # LOG_LEVEL: info
+  # LOG_LEVEL:
+  #   enabled: yes
+  #   value: info
 
 metrics:
   # Enable Prometheus exporter sidecar
